--- a/pom.xml
+++ b/pom.xml
@@ -209,7 +209,7 @@
     <spark.bundle.hive.shade.prefix/>
     <utilities.bundle.hive.scope>provided</utilities.bundle.hive.scope>
     <utilities.bundle.hive.shade.prefix/>
-    <argLine>-Xmx1g -Xms128m -XX:-OmitStackTraceInFastThrow</argLine>
+    <argLine>-Xmx1g -Xms128m -XX:-OmitStackTraceInFastThrow -Dsurefire.forkNumber=${surefire.forkNumber}</argLine>
     <jacoco.version>0.8.12</jacoco.version>
     <presto.bundle.bootstrap.scope>compile</presto.bundle.bootstrap.scope>
     <presto.bundle.bootstrap.shade.prefix>org.apache.hudi.</presto.bundle.bootstrap.shade.prefix>
@@ -2094,6 +2094,7 @@
         <skipUTs>true</skipUTs>
         <skipFTs>false</skipFTs>
         <skipITs>true</skipITs>
+        <argLine>-Xmx2g -Xms128m -XX:-OmitStackTraceInFastThrow -Dsurefire.forkNumber=${surefire.forkNumber}</argLine>
       </properties>
       <build>
         <plugins>
@@ -2103,8 +2104,9 @@
             <version>${maven-surefire-plugin.version}</version>
             <configuration combine.self="append">
               <skip>${skipFTs}</skip>
-              <forkCount>1</forkCount>
+              <forkCount>4</forkCount>
               <reuseForks>true</reuseForks>
+              <forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
               <groups>functional</groups>
             </configuration>
           </plugin>
@@ -2141,6 +2143,7 @@
         <skipUTs>true</skipUTs>
         <skipFTs>false</skipFTs>
         <skipITs>true</skipITs>
+        <argLine>-Xmx2g -Xms128m -XX:-OmitStackTraceInFastThrow -Dsurefire.forkNumber=${surefire.forkNumber}</argLine>
       </properties>
       <build>
         <plugins>
@@ -2150,8 +2153,9 @@
             <version>${maven-surefire-plugin.version}</version>
             <configuration combine.self="append">
               <skip>${skipFTs}</skip>
-              <forkCount>1</forkCount>
+              <forkCount>4</forkCount>
               <reuseForks>true</reuseForks>
+              <forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
               <groups>functional-b</groups>
             </configuration>
           </plugin>
@@ -2188,6 +2192,7 @@
         <skipUTs>true</skipUTs>
         <skipFTs>false</skipFTs>
         <skipITs>true</skipITs>
+        <argLine>-Xmx2g -Xms128m -XX:-OmitStackTraceInFastThrow -Dsurefire.forkNumber=${surefire.forkNumber}</argLine>
       </properties>
       <build>
         <plugins>
@@ -2197,8 +2202,9 @@
             <version>${maven-surefire-plugin.version}</version>
             <configuration combine.self="append">
               <skip>${skipFTs}</skip>
-              <forkCount>1</forkCount>
+              <forkCount>4</forkCount>
               <reuseForks>true</reuseForks>
+              <forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
               <groups>functional-c</groups>
             </configuration>
           </plugin>
