--- a/hudi-spark-datasource/hudi-spark/src/test/resources/junit-platform.properties
+++ b/hudi-spark-datasource/hudi-spark/src/test/resources/junit-platform.properties
@@ -19,3 +19,5 @@
 junit.jupiter.execution.parallel.enabled = true
 junit.jupiter.execution.parallel.mode.default = same_thread
 junit.jupiter.execution.parallel.mode.classes.default = same_thread
+junit.jupiter.execution.parallel.config.strategy = fixed
+junit.jupiter.execution.parallel.config.fixed.parallelism = 4
