--- a/.gitignore
+++ b/.gitignore
@@ -91,4 +91,9 @@ package-lock.json
 # Spark Binaries used for testing
 hudi-spark-datasource/hudi-spark/src/test/resources/upgrade-downgrade-fixtures/spark-versions/
 
+#######################################
+# AI Tools
+#######################################
 CLAUDE.md
+.claude
+.codex
