--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1272,5 +1272,7 @@ jobs:
           mvn clean install -DskipTests
       - name: Test hudi-trino-plugin with JDK 23
         working-directory: ./hudi-trino-plugin
+        env:
+          DOCKER_API_VERSION: "1.44"
         run:
           mvn test
