--- a/hudi-utilities/pom.xml
+++ b/hudi-utilities/pom.xml
@@ -533,6 +533,11 @@
       <artifactId>sqs</artifactId>
       <version>${aws.sdk.version}</version>
     </dependency>
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>kinesis</artifactId>
+      <version>${aws.sdk.version}</version>
+    </dependency>
 
     <!-- Hive - Test -->
     <dependency>
