Add several critical features:
1. Support aggregated records.
2. Avoid expired shards blocking the stream.

--- a/hudi-utilities/pom.xml
+++ b/hudi-utilities/pom.xml
@@ -543,6 +543,12 @@
       <artifactId>kinesis</artifactId>
       <version>${aws.sdk.version}</version>
     </dependency>
+    <!-- KPL de-aggregation: extracts user records from Kinesis Producer Library aggregated records -->
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>amazon-kinesis-deaggregator</artifactId>
+      <version>1.0.3</version>
+    </dependency>
 
     <!-- Hive - Test -->
     <dependency>
