chore(ci): Add Codecov coverage report in GitHub actions

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -49,7 +49,7 @@ ignore:
 
 comment:
   layout: "diff, flags, files"
-  behavior: default
+  behavior: new
   require_changes: false
   require_base: false
   require_head: true
